Fix padding on dialog inputs in dark mode

--- a/source/common/less/geometry/modal.less
+++ b/source/common/less/geometry/modal.less
@@ -86,7 +86,7 @@
       line-height: 150%;
       font-size: inherit;
       outline: none;
-      padding: 2px 10px;
+      padding: 10px;
       margin-bottom: 1em;
 
       &.inline {
