--- a/source/common/less/theme-berlin/dark/modal.less
+++ b/source/common/less/theme-berlin/dark/modal.less
@@ -35,7 +35,7 @@
         line-height: 150%;
         border: none;
         border-radius: @border-radius;
-        padding: 2px 10px;
+        padding: 10px;
         background-color: var(--grey-7);
         color: var(--grey-1);
         border-radius: @border-radius;
